Closed Bug 1686152 Opened 4 years ago Closed 4 years ago

apz.overscroll.enabled has no effect when webrender is enabled

Categories

(Core :: Panning and Zooming, defect)

defect

Tracking

()

VERIFIED FIXED
86 Branch
Tracking Status
firefox86 --- fixed
firefox89 --- verified
firefox90 --- verified

People

(Reporter: sawyerbergeron, Assigned: sawyerbergeron)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

Enabling webrender currently stops overscroll from functioning.

Expected results:
When webrender is enabled and apz.overscroll.enabled is set to true, I should be able to start an overscroll animation on pages with a scrollable region.

Blocks: overscroll
Assignee: nobody → sawyerbergeron
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0c73b3460bad Initial support for elastic scrolling with webrender enabled r=botond
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Blocks: 1697712

Comment on attachment 9197652 [details]
Bug 1686152 - Add Basic Overscroll Test

Revision D102115 was moved to bug 1697712. Setting attachment 9197652 [details] to obsolete.

Attachment #9197652 - Attachment is obsolete: true

Verified fixed in beta 89.0b2 (20210420191345) and Nightly 90.0a1 (2021-04-20) (20210420213949) on MacOS 11.2.3.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: