Bug 1686152: Initial support for elastic scrolling with webrender enabled r=botond

Differential Revision: https://phabricator.services.mozilla.com/D100283